--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -1,11 +1,7 @@
 # Upstream changes from _extends are only recognized when modifications are made to this file in the default branch.
 _extends: .github
 repository:
-  name: template
-  description: Template for Terraform Components
+  name: aws-athena
+  description: This component is responsible for provisioning an Amazon Athena workgroup, databases, and related resources
   homepage: https://cloudposse.com/accelerate
   topics: terraform, terraform-component
-
-
-
-
